[metadata]
name = py-event-mocks
version = 0.0.1
description = A small library that includes details mocks of AWS Lambda event sources, Python implementation.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/smatsumoto78/py-event-mocks
author = Shinji Matsumoto
author_email = shinji.mtsmt@gmail.com

[options]
package_dir=
    =src
packages=py_event_mocks
install_requires =
    mergedeep
