[metadata]
name = py-event-mocks
version = 0.0.3
description = A small library that includes details mocks of AWS Lambda event sources, Python implementation.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/smatsumt/py-event-mocks
author = Shinji Matsumoto
author_email = shinji.mtsmt@gmail.com

[options]
package_dir=
    =src
packages=py_event_mocks
install_requires =
    mergedeep
include_package_data = True
